[package]
name = "genula"
version = "0.1.0"
authors = ["sifyfy <sifyfy@sifyfy.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="1.0"
iced = "0.3"
mac_address = "1.1"
ntp = "0.5"
sha-1 = "0.9"
structopt = "0.3"